Bug 131139. Rightclicking or dragging link removes text selection, also fixes bug 132099 - cannot type in link text (composer). Fix from Pete Zha. Bug 124946 - F6/Ctrl+Tab no longer working to navigate frames (fix from Kyle Yuan). r=bryner, rjesup. sr=hewitt, a=asa